# mai-genetic-algorithm

./: lab.ipynb  main.ipynb  pyproject.toml
